/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package bank;
/**
 *
 * @author CHALA RAMIREZ
 */
public class Bank {
    public void executeCommand(Command command) {
        command.execute();
    }
}
