/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package bank;

/**
 *
 * @author jhuan
 */
public interface IConversionStrategy {
    double convert (double amount);
    
}
