@startuml

' ===== INTERFACES =====
interface Command {
    +execute()
    +undo()
}

interface IConversionStrategy {
    +convert(amount: double): double
}

' ===== CORE =====
class Account {
    -id: int
    -ownerName: String 
    -balance: double
    +Account()
    +getId(): int
    +getOwnerNamw(): String
    +getBalanceUSD(): double
    -validatePositiveAmount(double amountUSD, String opName): void
    -validateSufficientFunds(double amountUSD): void
    +deposit(amount: double)
    +withdraw(amount: double)
    +transfer(to: Account, amount: double)
}

class Bank {
    +executeCommand(command: Command)
}

class Main

' ===== COMMANDS =====
class MoneyDepositCommand {
    -account: Account
    -amount: double
    -sourceCurrency: String
    -conversionContext: ConversionContext
    -convertedAmount: double
    +MoneyDepositCommand()
    +execute()
    +undo()
    ' -convert(): double
}

class MoneyWithdrawCommand {
    -account: Account
    -amount: double
    -sourceCurrency: String
    -conversionContext: ConversionContext
    +MoneyWithdrawCommand()
    +execute()
    +undo()
}

class MoneyTransferCommand {
    -fromAccount: Account
    -toAccount: Account
    -amount: double
    -conversionContext: ConversionContext
    -convertedAmount: double
    -sourceCurrency: String
    +MoneyTransferCommand()
    +execute()
    +undo()
}

' ===== STRATEGY CONTEXT =====
class ConversionContext {
    -strategy: IConversionStrategy
    +setStrategy(strategy: IConversionStrategy)
    +selectStrategy(sourceCurrency: String)
    +convert(amount: double): double
}

' ===== STRATEGIES =====
class ConversionEuroToDollar {
    -eurToUsdRate: double
    +ConversionEuroToDollar()
    +convert(amount: double): double
}

class ConversionColombianPesosToDollar {
    -copToUsdRate: double
    +ConversionColombianPesosToDollar()
    +convert(amount: double): double
}

class ConversionMexicanPesosToDollar {
    -mxnToUsdRate: double
    +convert(amount: double): double
}

' ===== RELATIONSHIPS =====

' Command pattern
Command <|.. MoneyDepositCommand
Command <|.. MoneyWithdrawCommand
Command <|.. MoneyTransferCommand
Bank --> Command : executes

' Account usage
MoneyDepositCommand --> Account
MoneyWithdrawCommand --> Account
MoneyTransferCommand --> Account

' Strategy pattern
IConversionStrategy <|.. ConversionEuroToDollar
IConversionStrategy <|.. ConversionColombianPesosToDollar
IConversionStrategy <|.. ConversionMexicanPesosToDollar

ConversionContext --> IConversionStrategy
MoneyDepositCommand --> ConversionContext
MoneyWithdrawCommand --> ConversionContext
MoneyTransferCommand --> ConversionContext

' Main usage
Main --> Bank
Main --> Account
Main --> ConversionContext

@enduml